--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -168,6 +168,19 @@ stages:
                     releaseName: "azdspring-dev"
                     overrideValues: "image.repository=jfrogjd-docker.jfrog.io/jldeen/spring-boot-websocket-chat-demo,image.tag=$(Build.BuildId),ingress.hostname=azdspring20-dev.k8s.az.jessicadeen.com,buildID=$(Build.BuildId)"
 
+                - task: Maven@3
+                  inputs:
+                    mavenPomFile: '$(System.ArtifactsDirectory)/visual_tests/pom.xml'
+                    goals: 'test'
+                    options: 'clean test'
+                    publishJUnitResults: true
+                    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+                    javaHomeOption: 'JDKVersion'
+                    mavenVersionOption: 'Default'
+                    mavenAuthenticateFeed: false
+                    effectivePomSkip: false
+                    sonarQubeRunAnalysis: false
+
   - stage: PromoteToProd
     displayName: Promote to Prod
     dependsOn: DeployToDev
