--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -168,24 +168,25 @@ stages:
                     releaseName: "azdspring-dev"
                     overrideValues: "image.repository=jfrogjd-docker.jfrog.io/jldeen/spring-boot-websocket-chat-demo,image.tag=$(Build.BuildId),ingress.hostname=azdspring20-dev.k8s.az.jessicadeen.com,buildID=$(Build.BuildId)"
                 
-                - task: Bash@3
-                  inputs:
-                    targetType: 'inline'
-                    script: 'export APPLITOOLS_API_KEY=$(APPLITOOLS_API_KEY)'
-                  displayName: "Setup Applitools Local Environment"
+                - bash: |
+                    ## set api key
+                    export APPLITOOLS_API_KEY=$(APPLITOOLS_API_KEY)
+                    cd visual_tests && \
+                    mvn clean test
+                  displayName: "Visual Testing"
 
-                - task: Maven@3
-                  inputs:
-                    mavenPomFile: 'visual_tests/pom.xml'
-                    goals: 'test'
-                    options: 'clean test'
-                    publishJUnitResults: true
-                    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-                    javaHomeOption: 'JDKVersion'
-                    mavenVersionOption: 'Default'
-                    mavenAuthenticateFeed: false
-                    effectivePomSkip: false
-                    sonarQubeRunAnalysis: false
+                # - task: Maven@3
+                #   inputs:
+                #     mavenPomFile: 'visual_tests/pom.xml'
+                #     goals: 'test'
+                #     options: 'clean test'
+                #     publishJUnitResults: true
+                #     testResultsFiles: '**/surefire-reports/TEST-*.xml'
+                #     javaHomeOption: 'JDKVersion'
+                #     mavenVersionOption: 'Default'
+                #     mavenAuthenticateFeed: false
+                #     effectivePomSkip: false
+                #     sonarQubeRunAnalysis: false
 
   - stage: PromoteToProd
     displayName: Promote to Prod
