trying something else to access secret as env variable

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -135,8 +135,6 @@ stages:
           # name: work-machine
           name: jldeenlinux
         environment: "chattybot-dev"
-        variables:
-          APPLITOOLS_API_KEY: $(APPLITOOLS_API_KEY)
         strategy:
           runOnce:
             deploy:
@@ -177,6 +175,8 @@ stages:
                     cd visual_tests && \
                     mvn clean test
                   displayName: "Visual Testing"
+                  env:
+                    APPLITOOLS_API_KEY: $(APPLITOOLS_API_KEY)
 
                 # - bash: |
                 #     ## set api key
