--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -407,6 +407,7 @@ jobs:
     env:
       nameSpace: jfrog
       artDockerURL: jfrogjd-docker.jfrog.io
+      TEST_START_PAGE: ghchattybot-dev.k8s.az.jessicadeen.com
     steps:
       - name: "configure deployment environment"
         run: |
@@ -419,8 +420,22 @@ jobs:
       - name: "helm install chattybot dev"
         run: |
           # spring deploy
-          helm upgrade --install chattybot-dev $GITHUB_WORKSPACE/spring-boot-websocket-chat-demo-v0.1.0.tgz --namespace=$nameSpace --set ingress.hostname=ghchattybot-dev.k8s.az.jessicadeen.com --set image.repository=$artDockerURL/$GITHUB_REPOSITORY --set image.tag=$GITHUB_SHA --set buildID=$GITHUB_RUN_ID
+          helm upgrade --install chattybot-dev $GITHUB_WORKSPACE/spring-boot-websocket-chat-demo-v0.1.0.tgz --namespace=$nameSpace --set ingress.hostname=$TEST_START_PAGE --set image.repository=$artDockerURL/$GITHUB_REPOSITORY --set image.tag=$GITHUB_SHA --set buildID=$GITHUB_RUN_ID
+      - name: Applitools Build Task
+        run: |
+          # set batch ID
+          export APPLITOOLS_BATCH_ID=${{ github.run_id }} && echo "Setting environment variable APPLITOOLS_BATCH_ID: $APPLITOOLS_BATCH_ID"
 
+          # set batch name
+
+          export APPLITOOLS_BATCH_NAME="GitHub Actions / ${{ github.workflow }}" && echo "Setting environment variable APPLITOOLS_BATCH_NAME: $APPLITOOLS_BATCH_NAME"
+
+          # set server url
+          export APPLITOOLS_SERVER_URL=https://eyes.applitools.com && echo "Setting environment variable APPLITOOLS_SERVER_URL: $APPLITOOLS_SERVER_URL"
+
+          # set batch sequence
+          export APPLITOOLS_BATCH_SEQUENCE="GitHub Actions / ${{ github.workflow }}" && echo "Setting environment variable AAPPLITOOLS_BATCH_SEQUENCE: $APPLITOOLS_BATCH_SEQUENCE"
+          
       - name: "Visual Testing"
         run: |
           # mvn clean test
