--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -439,6 +439,12 @@ jobs:
           
       - name: "Visual Testing"
         run: |
+          # mvn -version
+          mvn -version
+
+          # set JAVA_HOME
+          export JAVA_HOME=/usr/lib/jvm/java-13-oracle
+          
           # mvn clean test
           cd visual_tests && \
           mvn clean test
