--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -315,6 +315,12 @@ jobs:
       SERVER_ID: jfrog-jd
       SLACK_CHANNEL: chattybot
     steps:
+    #checkout branch
+      - name: git checkout branch
+        uses: actions/checkout@v2
+        with:
+          ref: applitools
+
       - name: "jfrog install, configure cli"
         run: |
           # Get Jfrog CLI
