--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -463,15 +463,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '13'
-      - name: "troubleshooting"
+
+      - name: "testing"
         run: |
-          pwd 
-          echo ''
-          cat visual_tests/src/test/java/tests/ChattyBotTests.java
+          mvn -version 
+
+          which mvn
+          
       - name: "Visual Testing"
         env:
           APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}    
-        run: mvn -f visual_tests/pom.xml clean test test
+        run: mvn -f visual_tests/pom.xml clean test test -X
 
       - name: "Label all pods for network policy"
         run: |
