--- a/.github/workflows/visual-testing.yaml
+++ b/.github/workflows/visual-testing.yaml
@@ -6,7 +6,7 @@ jobs:
   deployMicroservicesDev:
     runs-on: self-hosted
     env:
-      TEST_START_PAGE: ghchattybot-dev.k8s.az.jessicadeen.com
+      TEST_START_PAGE: https://ghchattybot-dev.k8s.az.jessicadeen.com
     steps:
       # - name: Applitools Build Task
       #   run: |
@@ -42,28 +42,7 @@ jobs:
       #   uses: actions/setup-java@v1
       #   with:
       #     java-version: '13'
-      - name: Install Selenium
-        run: |
-            sudo pip3 install selenium
-      - name: ChromeWebDriver
-        run: |
-            cat <<EOF >> test.py
-            from selenium import webdriver
-            from selenium.webdriver.chrome.options import Options
-            options = Options()
-            options.add_argument("--headless")
-            options.add_argument('--no-sandbox')
-            options.add_argument('--disable-gpu')
-            options.add_argument('--disable-dev-shm-usage')
-            options.add_argument('disable-infobars')
-            options.add_argument("--disable-extensions")
-            driver = webdriver.Chrome(chrome_options=options, executable_path='/usr/bin/chromedriver')
-            driver.get("http://github.com/")
-            print ('Page title is ' + driver.title)
-            EOF
-            
-            python3 test.py
-            
+
       - name: git checkout branch
         uses: actions/checkout@v2
         with:
