--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -429,46 +429,48 @@ jobs:
         run: |
           # spring deploy
           helm upgrade --install chattybot-dev $GITHUB_WORKSPACE/spring-boot-websocket-chat-demo-v0.1.0.tgz --namespace=$nameSpace --set ingress.hostname=$hostname--set image.repository=$artDockerURL/$GITHUB_REPOSITORY --set image.tag=$GITHUB_SHA --set buildID=$GITHUB_RUN_ID
-      # - name: Applitools Build Task
-      #   run: |
-      #     # set batch ID
-      #     APPLITOOLS_BATCH_ID=${{ github.run_id }}
-
-      #     echo "::set-env name=APPLITOOLS_BATCH_ID::${{ github.run_id }}"
           
-      #     echo "Setting environment variable APPLITOOLS_BATCH_ID: $APPLITOOLS_BATCH_ID"
+      - name: Applitools Build Task
+        run: |
+          # set batch ID
+          APPLITOOLS_BATCH_ID=${{ github.run_id }}
 
-      #     # set batch name
-      #     APPLITOOLS_BATCH_NAME="GitHub Actions / ${{ github.workflow }}"
-
-      #     echo "::set-env name=APPLITOOLS_BATCH_NAME::GitHub Actions / ${{ github.workflow }}"
+          echo "::set-env name=APPLITOOLS_BATCH_ID::${{ github.run_id }}"
           
-      #     echo "Setting environment variable APPLITOOLS_BATCH_NAME: $APPLITOOLS_BATCH_NAME"
+          echo "Setting environment variable APPLITOOLS_BATCH_ID: $APPLITOOLS_BATCH_ID"
 
-      #     # set server url
-      #     APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
+          # set batch name
+          APPLITOOLS_BATCH_NAME="GitHub Actions / ${{ github.workflow }}"
 
-      #     echo "::set-env name=APPLITOOLS_SERVER_URL::https://eyes.applitools.com"
+          echo "::set-env name=APPLITOOLS_BATCH_NAME::GitHub Actions / ${{ github.workflow }}"
           
-      #     echo "Setting environment variable APPLITOOLS_SERVER_URL: $APPLITOOLS_SERVER_URL"
+          echo "Setting environment variable APPLITOOLS_BATCH_NAME: $APPLITOOLS_BATCH_NAME"
 
-      #     # set batch sequence
-      #     APPLITOOLS_BATCH_SEQUENCE="GitHub Actions / ${{ github.workflow }}"
+          # set server url
+          APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
 
-      #     echo "::set-env name=APPLITOOLS_BATCH_SEQUENCE::GitHub Actions / ${{ github.workflow }}"
+          echo "::set-env name=APPLITOOLS_SERVER_URL::https://eyes.applitools.com"
           
-      #     echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE: $APPLITOOLS_BATCH_SEQUENCE"
+          echo "Setting environment variable APPLITOOLS_SERVER_URL: $APPLITOOLS_SERVER_URL"
+
+          # set batch sequence
+          APPLITOOLS_BATCH_SEQUENCE="GitHub Actions / ${{ github.workflow }}"
+
+          echo "::set-env name=APPLITOOLS_BATCH_SEQUENCE::GitHub Actions / ${{ github.workflow }}"
+          
+          echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE: $APPLITOOLS_BATCH_SEQUENCE"
       
-      # - name: "Setup JDK"
-      #   uses: actions/setup-java@v1
-      #   with:
-      #     java-version: '13'
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '13'
+          architecture: x64
+          jdkFile: /usr/lib/jvm/java-13-oracle
 
       - name: "Visual Testing"
         env:
           APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
           TEST_START_PAGE: "https://$hostname"    
-        run: mvn -version && export JAVA_HOME= && mvn -f visual_tests/pom.xml clean test test
+        run: mvn -f visual_tests/pom.xml clean test test
 
       - name: "Label all pods for network policy"
         run: |
