--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -469,7 +469,7 @@ jobs:
       - name: "Visual Testing"
         env:
           APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
-          TEST_START_PAGE: https://$hostname
+          TEST_START_PAGE: https://ghchattybot-dev.k8s.az.jessicadeen.com
         run: mvn -f visual_tests/pom.xml clean test test
 
       - name: "Label all pods for network policy"
