add pipeline dependency

--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -412,7 +412,7 @@ jobs:
 
   deployMicroservicesDev:
     runs-on: self-hosted
-    # needs: buildImages
+    needs: buildImages
     env:
       nameSpace: jfrog
       artDockerURL: jfrogjd-docker.jfrog.io
