--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: applitools
+          clean: 'true'
 
       # log into Azure
       - name: "Login via Azure CLI"
@@ -317,12 +318,6 @@ jobs:
       SERVER_ID: jfrog-jd
       SLACK_CHANNEL: chattybot
     steps:
-    #checkout branch
-      # - name: git checkout branch
-      #   uses: actions/checkout@v2
-      #   with:
-      #     ref: applitools
-
       - name: "jfrog install, configure cli"
         run: |
           # Get Jfrog CLI
